# homelab-arcade

./: .env.example  .gitignore  AGENTS.md  README.md  RECOVERY.md  app_config.py  config.example.yaml  config_loader.py  dummy_server.py  install-service.ps1  maps.csv  portal_server.py  pyproject.toml  requirements.txt  server.py  supervisor.py
cs2/: __init__.py  config.py  control.py  cs2.sh  install_server_mods.sh  maps.csv  server.cfg  server.py
cs2/py/: __init__.py  controller.py  map.py  modes.py  ui.py
cs2/web/: index.html
docs/: variants.md
sandstorm/: __init__.py  server.py
sandstorm/web/: index.html
scripts/: install-service.ps1  up.ps1  up.sh
systemd/: arcade.env.example  arcade.service
tests/: test_config_loader.py  test_cs2_server_launch.py
web/: __init__.py  dummy.html  index.html  portal.html  shared.css
